Center modal in the One themes

--- a/styles/encourage.less
+++ b/styles/encourage.less
@@ -20,3 +20,11 @@
   opacity: 0;
   transition: visibility 0s 1s, opacity 1s ease-in-out;
 }
+
+// Centering for the One themes
+.theme-one-dark-ui,
+.theme-one-light-ui {
+  .encourage {
+    margin-left: auto !important;
+  }
+}
