Attempt to fix modal for the One theme
Follow up to #11

--- a/styles/encourage.less
+++ b/styles/encourage.less
@@ -28,3 +28,11 @@
     margin-left: auto !important;
   }
 }
+
+// Remove dark background for the One themes
+.theme-one-dark-ui,
+.theme-one-light-ui {
+  .encourage.modal:after {
+    display: none;
+  }
+}
